<resources>
    <string name="app_name">PHARMA</string>
    <string name="enter_the_brand_name">Enter The Brand Name</string>
    <string name="brand_name">BRAND NAME</string>
    <string name="strength">STRENGTH</string>
    <string name="choose_the_strength">Choose The Strength</string>
    <string-array name="whale_array">
        <item>Pick a whale sound!</item>
        <item>Humpback bubble net</item>
        <item>Humpback contact Call Moo</item>
        <item>Humpback contact Call Whup</item>
        <item>Humpback feeding Call</item>
        <item>Humpback flipper splash</item>
        <item>Humpback Tail slaps</item>
        <item>Humpback whale song</item>
        <item>Humpback whale song with outboard engine</item>
        <item>Humpback wheeze blows</item>
        <item>Killer whale echolocation clicks</item>
        <item>Killer whale offshore</item>
        <item>Killer whale resident</item>
        <item>Killer whale transient</item>
    </string-array>
    <string name="Indications">INDICATIONS</string>
    <string name="Photo">PHOTO</string>
    <string name="dose">Dose</string>
    <string name="enter_the_dose">Enter The Dose</string>
    <string name="channel_name">alarm</string>
    <string name="channel_description">alarm application</string>
    <string name="plavis_Ind">
    •	لا يوجد مشكلة فى امكانية تناول الدواء قبل او بعد الطعام\n
    •	يفضل تناول القرص يوميا فى نفس الوقت\n
    •	اذا تم نسيان الجرعة, يجب عدم تأخير ميعاد الجرعة اكثر من 12 ساعة\n
    •	يمنع تناول هذا العقار مع الرضاعة\n
    </string>
    <string name="janumet_ind">
    •	ينصح بتناول الدواء بعد الطعام لتجنب الاثار الجانبية الناتجه داخل الجهاز الهضم\n
    •	يفضل تناول الدواء فى المساء فى حالة الاقراص ممتدة المفعول\n
    •	احذر من تعاطى الكحوليات مع هذا الدواء\n
    •	لا ينصح بتناول هذا الدواء اثناء الحمل او الرضاعة\n
    </string>
    <string name="Ibuprofen_Ind">
    •	يأخذ قرص كامل مع ماء أو عصير أو حليب\n
    •	لا تمضع أو تكسر القرص لتجنب اضطرابات المعدة\n
    •	يمكن أن تأخذه بعد وجبة خفيفة لتجنب اضطرابات المعدة\n
    </string>
    <string name="Diclofenac_Ind">
    •	يتم تناول الدواء بكوب كامل من الماء\n
    •	لا تستلقي لمدة 10 دقائق على الأقل بعد تناول الدواء\n
    •	لتجنب اضطراب المعدة ، تناول الدواء مع الحليب أو الطعام أو مضاد الحموضة\n
    </string>
    <string name="Metronidazole">
    •	الجرعة الفموية: 500-750 ملغ 3 مرات في اليوم لمدة 7-10 أيام\n
    •	الجرعة المهبلية: لبوس عن طريق المهبل مرة واحدة يومياً قبل النوم\n
    •	يؤخذ مع او بدون طعام\n
    </string>
    <string name="Cetirizine">
    •	يؤخذ مرة واحدة يوميا مع او بدون طعام\n
    </string>
    <string name="Escitalopram">
    •	عدم استعمال هذا الدواء للأطفال الذين تقل أعمارهم عن 12 سنة\n
    •	اذا شعر المريض بالغثيان نتيجة تناوله هذا الدواء فيمكن اخذه بعد الطعام لتجنب تلك الاعراض\n
    </string>
    <string name="Dexamethasone_inf">
    •	يفضل ان يؤخد مع الاكل وليس على معدة فارغة لأنه corticosteroid ولا يؤخذ مع ال grapefruit pomegranate لأنه يزيد من تركيزه \n
    </string>
    <string name="Ondansetrone">
    •	ليس من الضروري ان يؤخد مع أو بدون الأكل ولكن يفضل في حالات الترجيع بسبب الطعام ان يؤخذ قبل الوجبه بربع أو نصف ساعه \n
    </string>
    <string name="Fusidic">
    •	يجب تعقيم اليدين جيدا قبل وضع الكريم او المراهم\n
    •	لا ترتدي عدسات لاصقة اثناء استخدام قطرات المضاد\n
    •	اذا لديك حساسية من تلك المادة وقف استخدام فورا و اخبر طبيبك\n
    •	لا يوضع حول العين او الفم أو الأنف\n
    </string>
    <string name="Thioctic">
    •	تركيز ٣٠٠ مجم يؤخذ مرتين يوميا\n
    •	تركيز ٦٠٠ مجم يؤخذ مرة يوميا و يفضل علي معدة فارغة\n
    •	لا يجب استخدام هذا الدواء في حالة قلة تركيز سكر الدم و يجب الرجوع الي الطبيب الشخصي\n
    •	لا يستخدم من قبل الحوامل و المرضعات\n
    </string>
    <string name="Budesonide_ind">
    •	 أخد الجرعة كاملة في الصباح مع أو بدون طعام\n
    </string>
    <string name="Dapagliflozin_ind">
    •	 يؤخذ مع أو بدون طعام\n
    </string>
    <string name="Bisoprolol_ind">
    •	يجب أخذ القرص مرة صباحا ويمكن أخذه مع الطعام\n
    •	لا تكسر او تمضغ القرص قبل البلع\n
    </string>
    <string name="Gabapentin_ind">
    •	يؤخذ مع كوب كامل من الماء, ثلاث مرات يوميا بحيث يكون بين كل جرعه وأخرى 8 ساعات\n
    •	لا يجب أن يتخطى الوقت بين الجرعه والثانيه اكثر من 12 ساعه\n
    </string>
    <string name="Diclofenac_cap">
    •	يتم تناول الدواء بكوب كامل من الماء\n
    •	لا تستلقي لمدة 10 دقائق على الأقل بعد تناول الدواء لتجنب اضطرابات المعدة\n
    •	تناول الدواء مع الحليب أو الطعام أو مضاد الحموضة\n
    </string>
    <string name="Diclofenac_gel">
    •	لا يستخدم ديكلوفيناك جل على الجروح المفتوحة،أو المناطق الملتهبة،أو الحروق\n
    </string>
    <string name="Diclofenac_amp">
    •	تستخدم تحت إشراف طبيب\n
    </string>
    <string name="Diclofenac_supp">
    •	يجب غسل اليدين جيداً قبل إدخال اللبوس\n
    •	ينبغي التوقف عن الحركة لمدة دقائق\n
    •	تغسل اليدين جيداً عند الإنتهاء\n
    </string>
    <string name="Paracetamol_ind">
    •	يؤخذ الباراسيتامول مع أو بدون طعام، ويمكن تناوله مع الطعام إذا تسبب في اضطراب المعدة\n
    </string>
    <string name="Forbudes">
    •	يجب حمل البخاخ في مستوى رأسي\n
    •	تنفس ثم ضع مقدمة البخاخ بين شفتيك ثم استنشق بقوة\n
    •	اخرج البخاخ من بين شفتيك ثم تنفس بصورة طبيعية\n
    •	لا تمضغ مقدمة البخاخ\n
    •	قم بتنظيف البخاخ بعد كل استخدام بمناديل ورقية جافة ولا تقم ببل البخاخ\n
    </string>
    <string name="Diglifloz">
    •	يؤخذ الدواء مع طعام او بدونه\n
    •	يحفظ في درجة حرارة الغرفة\n
    •	يجب علي المريض تجنب شرب الكحوليات\n
    •	ينصح للمريض بالالتزام بعمل التمارين الرياضية و المحافظ علي نظام غذائي جيد\n
    </string>
    <string name="co_ind">
    •	يؤخذ مع أو بدون طعام\n
    •	لا يعطي الدواء للحوامل أو المرضعات\n
    •	يجب علي المريض عدم تعاطي المكملات الغذائية التي تحتوي علي البوتاسيوم أثناء تعاطيه هذا الدواء دون الرجوع للطبيب\n
    •	يجب علي المريض تجنب الاغذية الغنية بالبوتاسيوم لتجنب تعارضها مع العلاج\n
    •	يجب علي المريض تجنب الوجبات الدسمة و مراقبة  مستوي الكوليسترول و الدهون الثلاثية باستمرار\n
    </string>
    <string name="Mavilor">
    •	يؤخذ الدواء مع او بدون طعام\n
    •	يجب علي المريض تجنب الوجبات الدسمة و مراقبة  مستوي الكوليسترول و الدهون الثلاثية باستمرار\n
    •	يجب علي المريض الفصل بين هذا الدواء و أي دواء متعدد الفيتامينات ساعتين علي الاقل\n
    </string>
    <string name="Tavacin">
    •	يتم أخذ قرص كاملا مع أو بدون الطعام و يجب أخذه بفارق ساعتين قبل أو بعد تناول أدوية مضادات الحموضة و الفيتامينات أو الأدوية التي تحتوي على مكملات غذائية معدنية\n
    •	في حال تجاوز معاد الجرعة يمكن أخد قرص في حالة التذكر بشرط أن لا يقل ميعاد الجرعة القادمة عن ثمان ساعات ، أما في حالة تذكرها قبل الجرعة القادمة بفارق وقت أقل من ثمان ساعات ف يجب الانتظار حتى موعد الجرعة القادمة\n
    </string>
    <string name="Gynera">
    •	يتم تناول قرص كاملا مع أو بدون طعام\n
    •	في حالة اضطرابات المعدة يمكن أخذ قرص مع الطعام\n
    •	في حالة نسيان الجرعة يتم أخذ القرعة في أسرع الوقت ، في حالة اقتراب الجرعة القادمة يتم الالتزام ترك الجرعة المنسية و الالتزام بالميعاد التالي للجرعة\n
    •	إبلاغ الطبيب في حالة وجود نزيف\n
    •	إبلاغ الصيدلي في حالة تناول فيتامينات أو أدوية أخرى\n
    </string>
    <string name="Oral">
    •	يؤخذ مع الطعام إذا كانت الجرعة مرة واحدة يومياً\n
    •	يفضل اخذ الجرعة في الصباح\n
    •	يجب علي المريض متابعة مستوي ضغط الدم باستمرار و تجنب الاغذية او الادوية التي قد تتسبب في ارتفاع ضغط الدم\n
    •	يجب علي المريض تجنب الوجبات المليئة بالدهون و متابعة مستوي الكوليسترول في الدم باستمرار\n
    </string>
    <string name="Ramitac">
    •	لا يصلح الدواء في حالات الحمل\n
    •	يؤخذ الدواء قبل أو بعد الطعام ويجب الإبتعاد عن الأكل المليء بالبوتاسيوم\n
    •	يجب علي المريض متابعة مستوي ضغط الدم باستمرار و تجنب الاغذية او الادوية التي قد تتسبب في ارتفاع ضغط الدم\n
    •	في حالة عدم قدرة المريض علي بلع الدواء فيمكن له تذويب القرص في كوب صغير من الماء او العصير و شربه\n
    </string>
    <string name="celebrex">
    •	يفضل تناول الدواء بعد الاكل لتحسين امتصاصه\n
    •	اذا كان المريض يعاني من صعوبة في البلع فيمكن للمريض تفريغ محتويات الكبسولة علي مقدار ملعقة شاي من الماء او عصير التفاح و تناولها\n
    •	يجب علي المريض تجنب الاطعمة او الادوية التي قد تسبب ارتفاع ضغط الدم اثناء تناول هذا الدواء\n
    •	يجب علي مرضي الضغط متابعة قياس الضغط باستمرار أثناء تناول هذا الدواء\n
    </string>
    <string name="Ator">
    •	يجب علي المريض متابعة مستوي الكوليسترول في الدم باستمرار\n
    •	يجب علي المريض الالتزام بنظام غذائي قليل الدهون\n
    •	في حالة احساس المريض بوجود الم في العضلات دون تفسير بعد فترة من اخذ الدواء  فيجب عليه التوقف عن اخذ الدواء و الرجوع للطبيب المعالج و اخباره\n
    •	يجب علي المريض تجنب تناول فاكهة الجريب فروت او شرب عصير الجريب فروت اثناء تناول هذا الدواء\n
    •	يفضل تناول هذا الدواء في نفس المعاد يوميا\n
    </string>
    <string name="Enoxaparin">
    •	عند إعطاء دواء الانكسابارين عبر الحقن تحت الجلد، يجب إمساك الجلد وطيه بين الإبهام والسبابة والتأكد من إدخال كامل الإبرة في الجلد، والحرص على التغير والتبديل في مكان الحقن\n
    •	يجب تجنب فرك مكان الحقن بعد الحقن لتقليل الكدمات\n
    •	لا حاجة لطرد الفقاعة من حقنة دواء الانكسابارين قبل القيام بعملية الحقن\n
    •	عند إعطاء دواء الانكسابارين عبر الوريدي، يجب عدم خلط الدواء أو إعطاؤه مع الأدوية الأخرى\n
    •	عادة ما يتم تحديد الجرعة من قبل الطبيب المشرف على المريض\n
    •	بشكل عام إن جرعة الانكسابارين المعتادة هي : (1 ملليجرام/كيلوجرام كل 12 ساعة لعلاج جلطة الأوردة العميقة)\n
    </string>
    <string name="Cefotaxime">
    •	يحدد الطبيب الجرعة تبعاً للعمر، والوزن، وطبيعة المرض\n
    •	عادة ما يتلقى المريض جرعة عن طريق الحقن العضلي أو الوريدي كل 12 أو 24 ساعة\n
    •	يجب عدم تكرار تناول الدواء دون استشارة الطبيب\n
    •	لا يجب استخدام الدواء لمدة تزيد عن أسبوع\n
    •	يوصى بتغيير موضع الحقن الوريدي، لتلافي حدوث الوذمات الوريدية\n
    </string>
    <string name="Fexofenadine">
    •	يرجي الإمتناع عن تناول البرتقال أو عصير العنب أو التفاح  أثناء فترة أخذ الدواء لتجنب نقص فعاليته\n
    </string>
    <string name="Rosuvastatin">
    •	يحظر اخذ الدواء في حالة معاناة المريض من مرض يتطلب استخدام دواء الكولشيسين بدون مراجعة الطبيب\n
    •	يرجي عمل اختبار دوري لوظائف الكلى للتأكد أن CK في النطاق الطبيعي\n
    </string>
    <string name="Glavus">
    •	يتوفر العلاج علي شكل أقراص , الجرعه الموصي بها مرتين في اليوم ( قرص صباحاًومساءاً)\n
    •	يفضل تناوله مع الطعام او بعده مباشرة لتقليل مشاكل المعده التي يسببها العلاج\n
    •	يجب  اجراء فحوصات وظائف الكبد والكلي  وفيتامين ب 12 للمريض قبل استخدام العلاج وعلي فترات منتظمه اثناء العلاج\n
    •	يمنع تناول الكحوليات اثناء فترة العلاج\n
    </string>
    <string name="Diamicron">
    •	يوصى بأخذ العلاج كما هو موصوف من قبل الطبيب وابتلاع أقراص العلاج مع كوب من الماء، وعدم مضغهم\n
    •	يوصى بتناول جرعة العلاج في الصباح مع وجبة الإفطار في حال تم وصف العلاج مرة واحدة يومياً\n
    •	يوصى بتناول جرعة العلاج في الصباح والمساء مع الطعام في حال تم وصف العلاج مرتين يومياً\n
    •	تناول العلاج في نفس الوقت تقريباً من كل يوم، ويساعد هذا على تذكر أخذ الدواء\n
    •	يجب عدم تخطي الوجبات أثناء فترة العلاج، لان ذلك يزيد من خطر هبوط سكر الدم\n
    •	في حال تم نسيان أخذ جرعة الدواء، فيجب تناولها بمجرد التذكر مع وجبة طعام، ولكن إذا كان موعد الجرعة التالية قد اقترب فيجب حينها عدم أخذ الجرعة المنسية وانتظار موعد الجرعة المقبلة\n
    •	يجب تجنب التوقف عن العلاج فجأة أو دون استشارة الطبيب\n
    •	يجب فحص مستوى السكر في الدم من وقت الى آخر أثناء العلاج بدواء غليكلازايد لتقليل خطر حدوث نوبات نقص السكر، حيث قد يسبب الدواء هبوط السكر\n
    </string>
    <string name="Pantoprazole">
    •	يؤخذ  قبل الفطار بنصف ساعة على معدة فارغة\n
    </string>
    <string name="Amoxicillin">
    •	يفضل أن يؤخذ في بداية الوجبات الخفيفة\n
    </string>
    <string name="Sildenafil">
    •	يؤخذ قبل الجماع بساعه\n
    •	لا يؤخد مع مرضي القلب (خاصة ادوية النيترات)\n
    •	لا يؤخذ لمريض يعاني من مشاكل قلبيه مثل الذبحه الصدريه او قصور في عضله القلب\n
    •	إذا كان الضغط (90/60) : ينصح بعدم إستخدامه\n
    •	استشر الطبيب لضبط الجرعة المناسبة إذا كنت تعاني من قصور في وظائف في الكبد أو الكلى\n
    </string>
</resources>