<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        tools:context=".MainActivity">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/brand_back"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@id/sec_linear"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/brand_name_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/labels_back"
                android:padding="6dp"
                android:text="@string/brand_name"
                android:textColor="@color/labels_back"
                android:textSize="20sp"
                android:textStyle="bold" />

            <AutoCompleteTextView
                android:id="@+id/brand_name_et"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/enter_the_brand_name"
                android:padding="7dp"
                android:textSize="24sp" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/sec_linear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/brand_back"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/dose_linear"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout">

            <TextView
                android:id="@+id/strength_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/labels_back"
                android:padding="6dp"
                android:text="@string/strength"
                android:textColor="@color/labels_back"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/strength_spinner"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:contentDescription="@string/choose_the_strength"
                android:padding="7dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/dose_linear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/brand_back"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/im_linear"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sec_linear">

            <TextView
                android:id="@+id/dose_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/labels_back"
                android:padding="6dp"
                android:text="@string/dose"
                android:textColor="@color/labels_back"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/dose_et"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/enter_the_dose"
                android:padding="7dp"
                android:textSize="24sp" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/im_linear"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp"
            android:background="@drawable/brand_back"
            android:orientation="vertical"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@id/th_linear"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sec_linear">

            <TextView
                android:id="@+id/Photo_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/labels_back"
                android:padding="6dp"
                android:text="@string/Photo"
                android:textColor="@color/labels_back"
                android:textSize="20sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/med_img"
                android:layout_width="wrap_content"
                android:layout_height="180dp"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:padding="5dp"
                android:visibility="gone" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/th_linear"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/brand_back"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/im_linear">

            <TextView
                android:id="@+id/indications_label_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/labels_back"
                android:padding="6dp"
                android:text="@string/Indications"
                android:textColor="@color/labels_back"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/indications_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/almarai_light"
                android:lineSpacingExtra="8sp"
                android:padding="8dp"
                android:textColor="#DF131313"
                android:textSize="18sp"
                android:textStyle="bold"
                android:visibility="gone" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
